# devsecops-blueprints

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: f9-security-gate.yml
devsecops_blueprints/: main.py
devsecops_blueprints/commands/: audit.py  catalog.py  ci.py  ci_injector.py  fetch.py  iac.py  remediate.py  report.py  scan.py  setup.py
devsecops_blueprints/core/: __init__.py  github_client.py  patch_engine.py  report_generator.py  trivy_engine.py
devsecops_blueprints/ui/: __init__.py  console.py
ui/: console.py
